main/default/objects/Instructor__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <label>Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expertise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>