main/default/objects/Instructor__c/fields/Instructor_Code__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Code__c</fullName>
    <label>Instructor Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>