main/default/objects/Instructor__c/fields/Instructor_name__c.field-meta.xml
<CustomField>
    <fullName>Instructor_name__c</fullName>
    <label>Instructor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>